syntax = "proto3";

option csharp_namespace = "RPITest.Protocol";

message RpiRequest {
    int32 port = 1;
    int32 rpi = 2;
}

message RpiMessage {
    double server_misfire = 1;
    int64 packet_counter = 2;
    double last_tx_latency = 3;
}
